tests/errors/paste_parser_error.err
parser error: missing semicolon 
 ==> <pasted: ./tests/errors/paste_parser_error.tau:15:6>:1:10
1 |x: int; y <- expected ';' to terminate the statement
  |        ^ statement here
